# poe-trans

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
poe-trans-js/: README.md  bun.lockb  package.json
poe-trans-js/src/: build_assets.ts  translation.test.ts
src/: lib.rs  main.rs
src/db/: mod.rs
src/model/: items.rs  mod.rs  passive_skills.rs
src/transformer/: mod.rs
src/transformer/support/: mod.rs
src/transformer/xml/: build.rs  config.rs  items.rs  mod.rs  path_of_building.rs  skills.rs  slot.rs  tree.rs
src/translator/: mod.rs
src/translator/provider/: attribute.rs  base_type.rs  gem.rs  mod.rs  passive_skill.rs  property.rs  requirement.rs  stat.rs
src/translator/translator/: mod.rs
src/translator/translator/zh_to_en/: basic.rs  json.rs  mod.rs
src/translator/util/: mod.rs  stat.rs
