[package]
name = "poe-trans"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = {version = "1.3", default-features = false,features = ["std","unicode"]}
phf = { version = "0.11", features = ["macros"] }
base64 = "0.22.1"
indexmap = { version= "2.6.0", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

tokio = { version = "1", features = ["full"] }
warp = "0.3"
flate2 = "1.0"

[dev-dependencies]
serde_path_to_error = "0.1"
criterion = { version = "0.7" }

[[bench]]
name = "my_benchmark"
harness = false